# https---github.com-javialvarezdrive-GestorCursos

./: .replit  README.md  app.py  config.py  init_database.py  login.py  minimal.py  pdf_generator.py  pyproject.toml  render.yaml  render_requirements.txt  replit.nix  requirements.txt  simple.py  utils.py
.streamlit/: config.toml  saved_session.json
attached_assets/: Pasted--BLOQU-1742305439333.txt  Pasted--Web-Application-in-streamlit-for-Vigo-Local-Police-Agent-Management-Digest-Courses-and-Activit-1742277385138.txt  Pasted-Aqu-te-dejo-una-gu-a-paso-a-paso-y-un-ejemplo-de-c-digo-para-implementar-la-persistencia-de-sesi-n--1742288897518.txt  Pasted-import-streamlit-as-st-import-utils-Asumo-que-aqu-tienes-funciones-de-autenticaci-n-def-main-1742316658211.txt
pages/: 1_Actividades.py  1_Agentes.py  2_Cursos.py  3_Actividades.py  3_Cursos.py  4_Agentes.py  4_Estadisticas.py
sql/: functions.sql
