[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyyaml>=6.0.2",
    "streamlit-authenticator>=0.4.2",
    "streamlit>=1.43.2",
    "supabase>=2.13.0",
    "cryptography>=44.0.2",
]
